# IFace_body

./: .gitignore  CMakeLists.txt  LICENSE  README.md  coding_conventions.txt  create_msvc_with_prebuilt_3rdparty.bat
data/: 3DPoseEstimation_config.yml  DumbbellCounting_config.yml  HumanDetection_config.yml  config_headpose.yml  opencv_configure.yml
data/IFaceTest/: faceset_model.xml  iface_configure.yml
data/TreeModel/: tree_000.txt  tree_001.txt  tree_002.txt  tree_003.txt  tree_004.txt  tree_005.txt  tree_006.txt  tree_007.txt  tree_008.txt  tree_009.txt  tree_010.txt  tree_011.txt  tree_012.txt  tree_013.txt  tree_014.txt  tree_015.txt  tree_016.txt  tree_017.txt  tree_018.txt  tree_019.txt  tree_020.txt  tree_021.txt  tree_022.txt  tree_023.txt  tree_024.txt  tree_025.txt  tree_026.txt  tree_027.txt  tree_028.txt  tree_029.txt
extra/: CMakeLists.txt
extra/RSWrapper/: CMakeLists.txt  RSWrapper.cpp
include/: FaceAttributeRecognition.h  IFace3DPoseEstimation.h  IFaceWrapper.hpp  IHumanDetector_RGBD.h  IHumanOriEstimation.h  basetypes.hpp
lib/Windows/Debug/: FaceAttributeRecognition.lib  IFace.lib  IFace3DPoseEstimation.lib  IHumanDetector_RGBD.lib  IHumanOriEstimation.lib
lib/Windows/Release/: FaceAttributeRecognition.lib  IFace.lib  IFace3DPoseEstimation.lib  IHumanDetector_RGBD.lib  IHumanOriEstimation.lib
samples/: CMakeLists.txt
samples/3DPoseEstimation/: CMakeLists.txt  main.cpp
samples/DumbbellCounting/: CMakeLists.txt  bwlabel.cpp  bwlabel.h  color_GMM.cpp  color_GMM.h  initial_state.h  intial_state.cpp  log.h  main.cpp  mode.h  tracking.cpp  tracking.h  util.cpp  util.h
samples/HumanDetection/: CMakeLists.txt  main.cpp
samples/IFaceTest/: CMakeLists.txt  FaceDetectionUtility.cpp  FaceDetectionUtility.h  FaceRecognitionUtility.cpp  FaceRecognitionUtility.h  FaceRegistrationUtility.cpp  FaceRegistrationUtility.h  MyType.h  MyType_Main.h  PhotoIndexingUtility.cpp  PhotoIndexingUtility.h  main.cpp
