if(WIN32)
    if(USE_PREBUILT_LIBRARIES)
        include_directories(${CMAKE_SOURCE_DIR}/3rd_party/opencv/include)
        include_directories(${CMAKE_SOURCE_DIR}/3rd_party/librealsense/include)
        link_directories(${CMAKE_SOURCE_DIR}/3rd_party/opencv/lib)
        link_directories(${CMAKE_SOURCE_DIR}/3rd_party/librealsense/lib)
    else()
        include_directories("$ENV{LIBRS}/include")
        if(CMAKE_SIZEOF_VOID_P EQUAL 8)
            find_library(RealSense_LIB realsense "$ENV{LIBRS}/bin/x64" NO_DEFAULT_PATH)
            find_library(RealSense_LIB_DEBUG realsense-d "$ENV{LIBRS}/bin/x64" NO_DEFAULT_PATH)
        else()
            find_library(RealSense_LIB realsense "$ENV{LIBRS}/bin/Win32" NO_DEFAULT_PATH)
            find_library(RealSense_LIB_DEBUG realsense-d "$ENV{LIBRS}/bin/Win32" NO_DEFAULT_PATH)
        endif()
    endif()
else()
endif()

file(GLOB srcs "*.cpp")
file(GLOB hdrs "*.h*")

option(BUILD_SHARED_RSWrapper "Build RSWrapper as shared libraries" OFF)
if(BUILD_SHARED_RSWrapper)
    set(RSWrapper_TYPE SHARED)
    add_definitions(-DRSWrapper_SHARED)
else()
    set(RSWrapper_TYPE STATIC)
endif()

add_library(RSWrapper ${RSWrapper_TYPE} ${srcs} ${hdrs})
if(WIN32)
    if(USE_PREBUILT_LIBRARIES)
        target_link_libraries(RSWrapper debug opencv_core310d)
        target_link_libraries(RSWrapper optimized opencv_core310)
        target_link_libraries(RSWrapper debug realsense-d)
        target_link_libraries(RSWrapper optimized realsense)
    else()
        target_link_libraries(RSWrapper ${OpenCV_LIBS})
        target_link_libraries(RSWrapper optimized ${RealSense_LIB} debug ${RealSense_LIB_DEBUG})
    endif()
else()
    target_link_libraries(RSWrapper realsense)
    target_link_libraries(RSWrapper ${OpenCV_LIBS})
endif()
set_target_properties(RSWrapper PROPERTIES FOLDER "Extras")
