include_directories("${PROJECT_SOURCE_DIR}/extra/RSWrapper")
include_directories("$(PROJECT_SOURCE_DIR)/include")
file(GLOB HumanDetection_srcs "*.cpp")
file(GLOB HumanDetection_hdrs "*.h*")

if(USE_PREBUILT_LIBRARIES)
    include_directories(${CMAKE_SOURCE_DIR}/3rd_party/opencv/include)
    link_directories(${CMAKE_SOURCE_DIR}/3rd_party/opencv/lib)
    link_directories(${CMAKE_SOURCE_DIR}/3rd_party/librealsense/lib)
	include_directories(${CMAKE_SOURCE_DIR}/3rd_party/boost/include)
	link_directories(${CMAKE_SOURCE_DIR}/3rd_party/boost/lib)
endif()

if(WIN32)
	if(CMAKE_BUILD_TYPE MATCHES "Debug")
	    link_directories(${CMAKE_SOURCE_DIR}/lib/Windows/Debug)
	else()
	    link_directories(${CMAKE_SOURCE_DIR}/lib/Windows/Release)
	endif()
else()
	if(CMAKE_BUILD_TYPE MATCHES "Debug")
	    link_directories(${CMAKE_SOURCE_DIR}/lib/Linux/Debug)
	else()
	    link_directories(${CMAKE_SOURCE_DIR}/lib/Linux/Release)
	endif()
endif()

add_executable(HumanDetection ${HumanDetection_srcs} ${HumanDetection_hdrs})
target_link_libraries(HumanDetection IHumanDetector_RGBD IHumanOriEstimation RSWrapper)

if(USE_PREBUILT_LIBRARIES)
	if(CMAKE_BUILD_TYPE MATCHES "Debug")
		target_link_libraries(HumanDetection debug opencv_core310d debug opencv_imgproc310d  debug opencv_highgui310d)
		target_link_libraries(HumanDetection debug libboost_filesystem-vc120-mt-gd-1_59 debug libboost_thread-vc120-mt-gd-1_59)
	else()
		target_link_libraries(HumanDetection optimized opencv_core310 optimized opencv_imgproc310 optimized opencv_highgui310)
		target_link_libraries(HumanDetection optimized libboost_filesystem-vc120-mt-1_59 optimized libboost_thread-vc120-mt-1_59)
	endif()
else()
    target_link_libraries(HumanDetection ${OpenCV_LIBS})
endif()

if(UNIX)
    target_link_libraries(HumanDetection gomp)
endif()

if(RSWrapper_as_Shared)
    set_target_properties(HumanDetection PROPERTIES COMPILE_DEFINITIONS "-DRSWrapper_SHARED")
endif()

set_target_properties(HumanDetection PROPERTIES FOLDER "Samples")
