include_directories("${PROJECT_SOURCE_DIR}/src/face/faceutil")
include_directories("${PROJECT_SOURCE_DIR}/extra/RSWrapper")
file(GLOB IFaceTest_srcs "*.cpp")
file(GLOB IFaceTest_hdrs "*.h*")

if(USE_PREBUILT_LIBRARIES)
    include_directories(${CMAKE_SOURCE_DIR}/3rd_party/opencv/include)
    link_directories(${CMAKE_SOURCE_DIR}/3rd_party/opencv/lib)
    link_directories(${CMAKE_SOURCE_DIR}/3rd_party/librealsense/lib)
endif()
if(WIN32)
	if(CMAKE_BUILD_TYPE MATCHES "Debug")
	    link_directories(${CMAKE_SOURCE_DIR}/lib/Windows/Debug)
	else()
	    link_directories(${CMAKE_SOURCE_DIR}/lib/Windows/Release)
	endif()
else()
	if(CMAKE_BUILD_TYPE MATCHES "Debug")
	    link_directories(${CMAKE_SOURCE_DIR}/lib/Linux/Debug)
	else()
	    link_directories(${CMAKE_SOURCE_DIR}/lib/Linux/Release)
	endif()
endif()

add_executable(IFaceTest ${IFaceTest_srcs} ${IFaceTest_hdrs})
target_link_libraries(IFaceTest IFace RSWrapper)

if(USE_PREBUILT_LIBRARIES)
	if(CMAKE_BUILD_TYPE MATCHES "Debug")
	    target_link_libraries(IFaceTest debug opencv_objdetect310d opencv_ml310d opencv_highgui310d opencv_imgproc310d opencv_core310d opencv_imgcodecs310d)
	else()
	    target_link_libraries(IFaceTest optimized opencv_objdetect310 opencv_ml310 opencv_highgui310 opencv_imgproc310 opencv_core310 opencv_imgcodecs310)
	endif()
else()
    target_link_libraries(IFaceTest ${OpenCV_LIBS})
endif()

set_target_properties(IFaceTest PROPERTIES FOLDER "Samples")
